--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -3,7 +3,19 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    gap: 50px;
+    width: 100%;
+    height: 100%;
+
+    input:focus,
+    select:focus,
+    textarea:focus,
+    button:focus {
+        outline: none;
+    }
 
     @import './components/navbar.scss';
     @import './components//revenue.scss';
+    @import './components//table.scss';
+    @import './components/footer.scss';
 }
