--- a/src/styles/components/navbar.scss
+++ b/src/styles/components/navbar.scss
@@ -3,14 +3,32 @@
     width: 100%;
     justify-content: space-between;
     align-items: center;
-    background-color: blue;
+    background-color: #1c7ed6;
     height: 10vh;
+    position: sticky;
+    top: 0px;
+    z-index: 100;
 
     .revenue-drop-down{
         margin-left: 50px;
+
+        select{
+            cursor: pointer;
+            padding: 10px;
+            width: 100%;
+            min-width: 150px;
+            border: 0px;
+            font-weight: bold;
+            font-family: sans-serif;
+            font-size: 14px;
+        }
     }
 
     .name-attribute{
         margin-right: 50px;
+        font-family: sans-serif;
+        font-size: 16px;
+        font-weight: bold;
+        color: #fff;
     }
 }
